Distinguish the Facet itself from the RolePlayer's on it, now called a Receptacle, in CCM fashion.

--- a/qos/src/org/cougaar/core/qos/ca/package.html
+++ b/qos/src/org/cougaar/core/qos/ca/package.html
@@ -23,8 +23,10 @@
   performed on the Artifact by clients playing that Role.  These
   interfaces are therefore very much like <i>Facets</i> in the CORBA
   Component Model: they present a Role-specific viewport into the
-  Artifact as a whole.  A Template also defines a set of parameters
-  that distinguish the individuals of that kind of Artifact.
+  Artifact as a whole.  Likewise, the client's handle on a Facet is
+  similar to a <i>Receptacle</i> in CCM.  A Template also defines a
+  set of parameters that distinguish the individuals of that kind of
+  Artifact.
 
 <p>An instance of a CoordinationArtifactTemplate is something like a
   Java class: it defines a <i>kind</i> of Artifact, in terms of its
@@ -46,6 +48,9 @@
  <li><strong>Facet</strong>: The generic viewport that any given
      RolePlayer has into the Artifact is specified by a Facet, which
      is effectively a definition of the role.
+ </li>
+
+ <li><strong>Receptacle</strong>: The RolePlayer's handle on a Facet.
  </li>
 
  <li><strong>CoordinationArtifact</strong>: The creation of Facets and
